feat: Initial commit in new home.
- Added TypeScript support.
- Refactored JS code to TS.
- Personalised license, package.json, etc.
- Wrote up initial action inputs.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
     - run: npm test
 
   # test action works running from the graph
+  # TODO: this test is from the boilerplate projec.
   test:
     runs-on: ubuntu-latest
     steps:
