--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,26 @@
-name: 'Wait'
-description: 'Wait a designated number of milliseconds'
+name: 'rsync-by-joe'
+description: 'Synchronize files to a remote server with rsync.'
 inputs:
-  milliseconds:  # id of input
-    description: 'number of milliseconds to wait'
+  host: # Remote host address
+    description: 'Remote host to connect to'
     required: true
-    default: '1000'
+  port: # Optional remote hos address
+    description: '(Optional) remote host port (defaults to 22)'
+    default: 22
+  username: # User to connect to
+    description: 'Username on the remote host.'
+    required: true
+  ssh_key: # Private SSH key to authenticate with.
+    description: 'Private SSH key to connect with. Make sure the matching public key is in the remote server's authorized_keys file.'
+    required: true
+  rsync_path: # Optional path to the rsync binary.
+    description: '(Optional) Full path to rsync if not in the PATH. Make sure this rsync can actually execute on the runner.'
+    required: false
+    default: ''
+
 outputs:
   time: # output will be available to future steps
     description: 'The message to output'
 runs:
-  using: 'node12'
+  using: 'node15'
   main: 'dist/index.js'
