--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,24 @@ jobs:
     - run: npm ci
     - run: npm test
 
-  # test action works running from the graph
-  # TODO: this test is from the boilerplate projec.
   test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: ./
       with:
-        milliseconds: 1000
+        host: ${{ secrets.TEST_HOST }}
+        username: ${{ secrets.TEST_USER }}
+        ssh_key: ${{ secrets.TEST_SSH_KEY }}
+        source: '/'
+        dest: '/home/${{ secrets.TEST_USER }}/tmp/tmptmptmp'
+
+  # test action works running from the graph
+  # TODO: this test is from the boilerplate projec.
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - uses: ./
+  #     with:
+  #       milliseconds: 1000
