--- a/action.yml
+++ b/action.yml
@@ -11,10 +11,13 @@ inputs:
     description: 'Username on the remote host.'
     required: true
   ssh_key: # Private SSH key to authenticate with.
-    description: 'Private SSH key to connect with. Make sure the matching public key is in the remote server's authorized_keys file.'
+    description: 'Private SSH key to connect with. Make sure the matching public key is in the remote authorized_keys file.'
     required: true
   ssh_passkey: # Passkey to decrypt the private key.
     description: 'Passkey for the private SSH key.'
+    required: false
+  ssh_host_key: # SSH of the host. Optional, but highly recommended.
+    description: '(Optional) SSL key of the remote host. It is *highly* recommended that you set this, instead of automatically trusting the remote key.'
     required: false
   rsync_path: # Optional path to the rsync binary.
     description: '(Optional) Full path to rsync if not in the PATH. Make sure this rsync can actually execute on the runner.'
@@ -33,6 +36,9 @@ inputs:
   dest: # Destination path of the copy.
     description: 'Destination path of the files on the remote host.'
     required: true
+  path_extras: # Extra segments to append to PATH.
+    description: '(Optional) An array of additional segments to add to PATH. Use this if the necessary executables are installed in non-standard locations.'
+    required: false
 
 outputs:
   time: # output will be available to future steps
