--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
   "dependencies": {
     "@actions/core": "^1.4.0",
     "@actions/exec": "^1.1.0",
-    "@actions/io": "^1.1.1"
+    "@actions/io": "^1.1.1",
+    "chance": "^1.1.7"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/chance": "^1.1.2",
     "@types/jest": "^26.0.23",
     "@vercel/ncc": "^0.28.6",
     "eslint": "^7.28.0",
