wip: Test fixes.

--- a/action.yml
+++ b/action.yml
@@ -27,9 +27,9 @@ inputs:
     description: '(Optional) Override the default rsync arguments ["-avzr", "--delete"] with your own.'
     required: false
     default:
-      - '-avzr'
-      - '--delete'
-      - '--mkpath'
+      - "-avzr"
+      - "--delete"
+      - "--mkpath"
   source: # Path of the files to copy.
     description: 'Source path of files to copy.'
     required: true
