--- a/action.yml
+++ b/action.yml
@@ -16,8 +16,8 @@ inputs:
   ssh_passkey: # Passkey to decrypt the private key.
     description: 'Passkey for the private SSH key.'
     required: false
-  ssh_host_key: # SSH of the host. Optional, but highly recommended.
-    description: '(Optional) SSL key of the remote host. It is *highly* recommended that you set this, instead of automatically trusting the remote key.'
+  ssh_host_fingerprint: # SSH of the host. Optional, but highly recommended.
+    description: '(Optional) Fingerprint of the remote host. It is *highly* recommended that you set this, instead of automatically trusting the remote key.'
     required: false
   rsync_path: # Optional path to the rsync binary.
     description: '(Optional) Full path to rsync if not in the PATH. Make sure this rsync can actually execute on the runner.'
@@ -27,9 +27,9 @@ inputs:
     description: '(Optional) Override the default rsync arguments ["-avzr", "--delete"] with your own.'
     required: false
     default: |
-      '-avzr'
-      '--delete'
-      '--mkpath'
+      -avzr
+      --delete
+      --mkpath
   source: # Path of the files to copy.
     description: 'Source path of files to copy.'
     required: true
