--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint .",
-    "prepare": "npx @vercel/ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "prepare": "npx @vercel/ncc@latest build src/index.ts -o dist --source-map --license licenses.txt",
     "test": "jest",
     "all": "npm run lint && npm run prepare && npm run test",
     "semantic-release": "semantic-release"
