--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "branches": [
       "+([0-9])?(.{+([0-9]),x}).x",
       "main",
-      "next",
-      "next-major",
+      {
+        "name": "next",
+        "prerelease": true
+      },
       {
         "name": "beta",
         "prerelease": true
@@ -34,11 +36,7 @@
           "changelogTitle": "Changelog"
         }
       ],
-      ["@semantic-release/npm",
-        {
-          "npmPublish": false
-        }
-      ]
+      "@semantic-release/npm"
     ]
   },
   "repository": {
