--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
   # unit tests on Github-hosted runner.
   units:
     runs-on: ubuntu-latest
+    needs: self_hosted_units
     steps:
     - uses: actions/checkout@v2
     - run: npm ci
@@ -19,6 +20,7 @@ jobs:
   # integration test using secrets on Githut-hosted runner.
   test:
     runs-on: ubuntu-latest
+    needs: self_hosted_test
     steps:
     - uses: actions/checkout@v2
     - uses: ./
@@ -38,7 +40,7 @@ jobs:
     - run: npm test
 
   # self-hosted integration test.
-  test_self_hosted:
+  self_hosted_test:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
