--- a/action.yml
+++ b/action.yml
@@ -19,10 +19,21 @@ inputs:
   ssh_host_fingerprint: # SSH of the host. Optional, but highly recommended.
     description: '(Optional) Fingerprint of the remote host. It is *highly* recommended that you set this, instead of automatically trusting the remote key.'
     required: false
+
+  # Optional paths to command-line tools.
   rsync_path: # Optional path to the rsync binary.
-    description: '(Optional) Full path to rsync if not in the PATH. Make sure this rsync can actually execute on the runner.'
+    description: '(Optional) Full path to rsync if not in the PATH.'
     required: false
-    default: ''
+  ssh_bin_path:
+    description: '(Optional) Full path to - or name of - the SSH client if not in the PATH.'
+    required: false
+  ssh_keyscan_path:
+    description: '(Optional) Full path to - or name of - ssh-keyscan if not in the PATH.'
+    required: false
+  ssh_keygen_path:
+    description: '(Optional) Full path to - or name of - ssh-keygen if not in the PATH.'
+    required: false
+
   rsync_args: # Optional arguments to use in lieu of the defaults.
     description: '(Optional) Override the default rsync arguments ["-avzr", "--delete"] with your own.'
     required: false
