--- a/package.json
+++ b/package.json
@@ -68,11 +68,13 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/chance": "^1.1.2",
     "@types/jest": "^26.0.23",
+    "@types/js-yaml": "^4.0.1",
     "@types/semantic-release": "^17.2.0",
     "@types/semver": "^7.3.6",
     "@vercel/ncc": "^0.28.6",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
+    "js-yaml": "^3.14.0",
     "semantic-release": "^17.4.4",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.2"
