--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "lint": "eslint .",
-    "prepare": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "build": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "prepare": "npm run build",
     "test": "jest",
     "all": "npm run lint && npm run prepare && npm run test",
     "semantic-release": "semantic-release"
@@ -14,10 +15,7 @@
     "branches": [
       "+([0-9])?(.{+([0-9]),x}).x",
       "main",
-      {
-        "name": "next",
-        "prerelease": true
-      },
+      "next",
       {
         "name": "beta",
         "prerelease": true
@@ -61,6 +59,7 @@
     "@actions/exec": "^1.1.0",
     "@actions/io": "^1.1.1",
     "chance": "^1.1.7",
+    "lodash": "^4.17.21",
     "semver": "^7.3.5"
   },
   "devDependencies": {
@@ -69,14 +68,15 @@
     "@types/chance": "^1.1.2",
     "@types/jest": "^26.0.23",
     "@types/js-yaml": "^4.0.1",
+    "@types/lodash": "^4.14.170",
     "@types/semantic-release": "^17.2.0",
     "@types/semver": "^7.3.6",
-    "@vercel/ncc": "^0.28.6",
+    "@vercel/ncc": "0.28.5",
     "eslint": "^7.28.0",
     "jest": "^27.0.4",
-    "js-yaml": "^3.14.0",
+    "js-yaml": "^4.1.0",
     "semantic-release": "^17.4.4",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.4"
   }
 }
