--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,11 @@
-name: "units-test"
+name: "unit-tests"
 on:
   pull_request:
   push:
     branches:
       - main
       - next
+      - beta
       - 'releases/*'
 
 jobs:
